--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
     "recharts": "^3.6.0",
+    "technicalindicators": "^3.1.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
