--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
     "lightweight-charts": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.21.0",
     "recharts": "^3.6.0",
+    "remark-gfm": "^4.0.1",
     "technicalindicators": "^3.1.0",
     "zustand": "^4.4.7"
   },
