--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "lightweight-charts": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-joyride": "^2.9.3",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.21.0",
     "recharts": "^3.6.0",
